# pyDiSCaMB

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml  win-64.yml
.github/workflows/: linting.yaml  test.yaml
conda/: compiler_macOS-latest.yml  compiler_macos-14.yml  compiler_ubuntu-latest.yml  compiler_windows-latest.yml  conda_build_config.yaml  dev_env.yml  meta.yaml
doc/: cctbx_integration.ipynb  deformation_map.ipynb  electron_density_map.py  electrostatic_potential_map.py  refinement.ipynb  usage.ipynb
include/: DiscambStructureFactorCalculator.hpp  DiscambWrapper.hpp  DiscambWrapperTests.hpp  InteractiveDiscambWrapper.hpp  ManagedDiscambWrapper.hpp  PythonInterface.hpp  TimedInterface.hpp  assert.hpp  atom_assignment.hpp  crystal_conversion.hpp  discamb_wrapper.hpp  python_wrapper.hpp  read_structure.hpp  scattering_table.hpp  tests.hpp
pydiscamb/: __init__.py  _cpp_module.pyi  cctbx_interface.py  discamb_wrapper.py  taam_parameters.py
pydiscamb/cctbx_interface/: __init__.py  from_scatterers.py  gradients.py  phil_scope.py
pydiscamb/discamb_wrapper/: __init__.py  cache.py  discamb_wrapper.py  factory_methods.py  fcalc_method.py
scripts/: generate_TimedInterface.py  generate_stub.py  measure_fcalc_gradients_runtime.py  measure_wrapper_runtime.py
scripts/examples/3NIR/: atom_types.txt
scripts/examples/6G1T/: atom_types.txt
scripts/examples/6GER/: atom_types.txt
scripts/examples/6IPU/: atom_types.txt
scripts/examples/7DER/: atom_types.txt
src/: DiscambStructureFactorCalculator.cpp  DiscambWrapper.cpp  DiscambWrapperTests.cpp  InteractiveDiscambWrapper.cpp  ManagedDiscambWrapper.cpp  PythonInterface.cpp  TAAM_SF.cpp  TimedInterface.cpp  atom_assignment.cpp  crystal_conversion.cpp  discamb_wrapper.cpp  python_module.cpp  python_wrapper.cpp  read_structure.cpp  scattering_table.cpp  tests.cpp
taam_sf/: __init__.py
tests/: _open_many_cached_wrappers.py  conftest.py  test_IAM_correctness.py  test_atom_assignment.py  test_cctbx_interface.py  test_correctness.py  test_direct_sf_calculation.py  test_f_calc_gradients.py  test_get_table.py  test_gradients.py  test_performance.py  test_structure_factors.py  test_taam.py  test_target_gradients.py  test_wrapper.py
