[project]
name = "pyDiSCaMB"
version = "0.0.1"
description="A python wrapper for DiSCaMB"
readme = "README.md"
authors = [
  { name = "Viljar Femoen", email = "viljar.femoen@mmk.su.se" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]


[build-system]
requires = [
  "scikit-build-core>=0.3.3", 
  "pybind11",
  "mypy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
addopts = "-raP"
markers = [
  "slow",
]
