[project]
name = "pydiscamb"
version = "0.4.1"
description="A python wrapper for DiSCaMB"
readme = "README.md"
authors = [
  { name = "Viljar Femoen", email = "viljar.femoen@mmk.su.se" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]


[build-system]
requires = [
  "scikit-build-core>=0.3.3", 
  "pybind11",
  "mypy"
]
build-backend = "scikit_build_core.build"


[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "pre-commit"]

[tool.scikit-build]
# The build type to use when building the project.
cmake.build-type = "Release"

# Fill out extra tags that are not required.
wheel.expand-macos-universal-tags = true

# Select the editable mode to use. Can be "redirect" (default) or "inplace".
editable.mode = "redirect"

# Turn on verbose output for the editable mode rebuilds.
editable.verbose = true

# Rebuild the project when the package is imported.
editable.rebuild = false

# The CMake build directory. Defaults to a unique temporary directory.
build-dir = "build"

# Message to display after successful install
messages.after-success = " ====== Release version successfully built ====== "

[[tool.scikit-build.overrides]]
if.state = "^editable"
cmake.build-type = "Debug"
messages.after-success = " ====== Debug version successfully built ====== "

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
addopts = "-raP"
markers = [
  "slow",
  "veryslow",
]
xfail_strict=true

[tool.black]
force-exclude = '\.pyi$'
